--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,9 @@ default: &default
 development:
   <<: *default
   database: final_capstone_backend_development
+  username: postgres
+  password: " "
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,6 +63,8 @@ development:
 test:
   <<: *default
   database: final_capstone_backend_test
+  username: postgres
+  password: " "
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
