--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,7 @@ default: &default
   adapter: postgresql
   encoding: unicode
   username: postgres
-  password: 316
+  password: Sigmaw0lf
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -26,9 +26,6 @@ default: &default
 development:
   <<: *default
   database: final_capstone_backend_development
-  username: postgres
-  password: " "
-
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -63,8 +60,6 @@ development:
 test:
   <<: *default
   database: final_capstone_backend_test
-  username: postgres
-  password: " "
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
