--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: Kefi Hotel Booking
+    databaseName: kefi_hotel_booking
+    user: kefi_hotel_booking_user
 
 services:
   - type: web
-    name: mysite
+    name: Kefi-Hotel-Booking-App
     env: ruby
     buildCommand: './bin/render-build.sh'
     startCommand: 'bundle exec puma -C config/puma.rb'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: Kefi Hotel Booking
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
