--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: final_capstone_backend
+    databaseName: final_capstone_backend_a9m4
+    user: final_capstone_backend_a9m4_user
 
 services:
   - type: web
-    name: mysite
+    name: Kefi-Hotel-Booking-App
     env: ruby
     buildCommand: './bin/render-build.sh'
     startCommand: 'bundle exec puma -C config/puma.rb'
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: final_capstone_backend
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
