--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: final_capstone_backend
+          name: final_capstone_backend_a9m4
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
