--- a/config/database.yml
+++ b/config/database.yml
@@ -20,8 +20,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   username: postgres
-  password: 316
-  host: localhost
+  password: ad316
 
 development:
   <<: *default
