--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: final_capstone_backend
-    databaseName: final_capstone_backend_a9m4
-    user: final_capstone_backend_a9m4_user
+  - name: kefi-backend
+    databaseName: kefi_backend
+    user: kefi_backend_user
 
 services:
   - type: web
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: final_capstone_backend_a9m4
+          name: kefi_backend
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
